--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <!-- <div class="main-content">
+    <div class="main-content">
         <div class="categories">
             <div class="categories-section-one">
                 <div class="home">
@@ -215,12 +215,12 @@
 
                 </div>
 
-                <div class="footer">
+                <div class="footer-two">
                     <span>Terms</span>
                     <span>Privacy</span>
                     <span>Policy & Safety</span>
                     <span>How YouTube works</span>
-                    <span>Test new features</span>
+                    <span class="tnf">Test new features</span>
                 </div>
                 
                 <div class="copyright">
@@ -228,7 +228,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
 
    
