--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                            <img src="assets/windowseleven.png" alt="">
+                            <img src="assets/hqwindows.png" alt="">
                         </div>
                         <div class="details">
                             <img src="assets/windows.png" alt="">
@@ -349,10 +349,9 @@
                                 <span class="video-title">Introducing Windows 11</span>
                             <div class="posted-by">
                                 <a href="https://www.youtube.com/@MicrosoftWindows" class="link">Windows</a>
-                                 <div class="badge">
+                                <div class="badge">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" aria-hidden="true" style="pointer-events:none;display:inherit;width:14;height:14"><path d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2M9.8 17.3l-4.2-4.1L7 11.8l2.8 2.7L17 7.4l1.4 1.4z"/></svg>
-                                 </div>
-                                
+                                </div>
                             </div>
                             <div class="views-and-duration">
                                 <span>13M views</span>
@@ -367,7 +366,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="assets/zbootcamp.png" alt="">
+                        <img src="assets/bootcamphq.png" alt="">
                     </div>
                     <div class="details">
                         <img src="assets/zaio.png" alt="">
@@ -379,7 +378,7 @@
                             <div class="views-and-duration">
                                 <span>73K views</span>
                                 <span class="dot">•</span>
-                                <span>5 months ago</span>
+                                <span>6 months ago</span>
                             </div>
                         </div>
                         <div class="video-options">
@@ -389,7 +388,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="assets/codfitwo.png" alt="">
+                        <img src="assets/codefitwohd.png" alt="">
                     </div>
                     <div class="details">
                         <img src="assets/theamp.png" alt="">
@@ -447,7 +446,7 @@
                             <div class="profile-sec">
                                 <span class="video-title">Granddad’s Playboy Home Renovation | The Boondocks | adult swim</span>
                             <div class="posted-by"> 
-                                <a href="https://www.youtube.com/@AppleDeveloper" class="link">Adult Swim</a>
+                                <a href="https://www.youtube.com/@adultswim" class="link">Adult Swim</a>
                                 
                                 <div class="badge">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" aria-hidden="true" style="pointer-events:none;display:inherit;width:14;height:14"><path d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2M9.8 17.3l-4.2-4.1L7 11.8l2.8 2.7L17 7.4l1.4 1.4z"/></svg>
@@ -514,7 +513,7 @@
                 </div>
                 <div class="video">
                     <div class="thumbnail">
-                        <img src="assets/collab-drip.png" alt="">
+                        <img src="assets/waffles-hq.png" alt="">
                     </div>
                     <div class="details">
                         <img src="assets/kfcdp.png" alt="">
